<resources>
    <string name="app_name">Task_01</string>
    <string name="Intro">Hello Developers</string>
    <string name="Date">Date :-</string>
    <string name="Date1">MM/DD/YY</string>
    <string name="button1">Show Date</string>
    <string name="button2">Show Time</string>
    <string name="time">Time :-</string>
    <string name="time1">Hr : / Mm :</string>
    <string name="reset">Reset</string>
</resources>