<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img1">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/introBar"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Intro"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="30dp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:textColor="#ff4d6d"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="25sp"
        android:id="@+id/dateText"
        android:text="@string/Date"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/introBar"
        tools:layout_editor_absoluteX="100dp">

    </TextView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/dateHint"
        android:layout_marginStart="35dp"
        android:textColorHint="#ff8fa3"
        android:hint="@string/Date1"
        android:textAlignment="center"
        android:textColor="#FAA307"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/dateText"
        app:layout_constraintTop_toBottomOf="@id/introBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="#ff4d6d"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="22sp"
        android:id="@+id/timeText"
        android:text="@string/time"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/dateButton"
        tools:layout_editor_absoluteX="100dp">

    </TextView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/timeHint"
        android:layout_marginStart="35dp"
        android:textColorHint="#ff8fa3"
        android:hint="@string/time1"
        android:textAlignment="center"
        android:textColor="#FAA307"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/timeText"
        app:layout_constraintTop_toBottomOf="@id/dateButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateButton"
        app:layout_constraintTop_toBottomOf="@id/dateText"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#09bc8a"
        android:text="@string/button1"
        android:textColor="#004346"
        android:textSize="18sp"
        android:textStyle="bold">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeButton"
        app:layout_constraintTop_toBottomOf="@id/timeText"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#09bc8a"
        android:text="@string/button2"
        android:textColor="#004346"
        android:textSize="18sp"
        android:textStyle="bold">

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="40dp"
        android:text="@string/reset"
        android:textSize="20sp"
        android:backgroundTint="#2ec4b6"
        />


</androidx.constraintlayout.widget.ConstraintLayout>